tests/bad/casts.glaz
fn main() {
  unsafe { _ = cast(3, rawptr); }
}
